changed color scheme and fixed contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -5,14 +5,14 @@
 }
 
 body {
-    background-color: lightcyan;
+    background-color: white;
     font-family: "Rajdhani", sans-serif;
     font-weight: 500;
     font-style: normal;
 }
 
 header {
-    background-color: burlywood;
+    background-color: #edaeab;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,41 +25,41 @@ header span {
 }
 
 header img {
-    border: 2px solid darkgoldenrod;
+    border: 2px solid #ca7873;
     border-radius: 10px;
 }
 
 nav {
-    background-color: rgb(30, 160, 160);
-    border-top: 2px solid darkcyan;
+    background-color: rgb(0, 95, 95);
+    border-top: 2px solid rgb(0, 65, 65);
 }
 
 nav a {
     display: block;
-    color: lightcyan;
+    color: white;
     text-align: center;
     padding: .5rem;
     text-decoration: none;
-    border-bottom: 2px solid darkcyan;
+    border-bottom: 2px solid rgb(0, 65, 65);
 }
 
 nav a:hover {
-    background-color: rgb(39, 188, 188);
+    background-color: darkcyan;
 }
 
 nav .active {
-    background-color: darkcyan;
+    background-color: rgb(0, 65, 65);
 }
 
 h1 {
     text-align: center;
     font-weight: 700;
-    color: darkcyan;
+    color: rgb(0, 65, 65);
 }
 
 .card {
-    border: 2px solid darkgoldenrod;
-    background-color: antiquewhite;
+    border: 2px solid #ca7873;
+    background-color: #ffe7e5;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 1rem;
@@ -68,10 +68,9 @@ h1 {
 .card h2 {
     text-align: center;
     padding: .75rem;
-    background-color: burlywood;
-    border-bottom: 2px solid darkgoldenrod;
+    background-color: #edaeab;
+    border-bottom: 2px solid #ca7873;
     font-weight: 600;
-    
 }
 
 .card p, li {
@@ -83,14 +82,14 @@ h1 {
 }
 
 .card a {
-    color: rgb(30, 160, 160);
+    color: rgb(0, 65, 65);
 }
 .card a:hover {
-    color: rgb(39, 188, 188);
+    color: darkcyan;
 }
 
 footer {
     font-weight: 400;
-    color: darkcyan;
+    color: rgb(0, 65, 65);
     text-align: center;
 }
